fix: wrap text in profile url fields #60

--- a/src/styles/ProfilePage.module.css
+++ b/src/styles/ProfilePage.module.css
@@ -16,3 +16,8 @@
     max-height: 50vh;
     overflow-y: scroll;
 }
+
+.Url {
+    word-break:break-all; 
+    font-size: 0.7rem;
+}
